--- a/src/main/resources/templates/dash/dash.html
+++ b/src/main/resources/templates/dash/dash.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
-    <script th:src="@{/node_modules/chart.js/dist/chart.js}" type="text/javascript"></script>
+    <script th:src="@{/chart.js/dist/chart.js}" type="text/javascript"></script>
 
     <!-- Bootstrap CSS -->
     <link th:href="@{/bootstrap-icons-1.9.1/bootstrap-icons.css}" rel="stylesheet" type="text/css">
@@ -28,188 +28,183 @@
     <div id="loader"></div>
     <div id="content">
         <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
-        <div class="ms-5" id="page-content-wrapper">
+
+        <div id="page-content-wrapper">
             <div class="flex-grow-1">
-                <div class="row">
-                    <div class="mt-5 col-md-2 minHeight minWidthBarra">
-                        <div class="p-3 text-start rounded-4 shadow bgBlue"
-                            style="width: 100%; height: 95%; color: #f5f6fa;">
-                            <div class="py-3 ">
-                                <p>Dados</p>
+                <div class="px-4 text-start bgBlue" style="width: 100%; height: 95%; color: #f5f6fa;">
+                    <div class="row">
+                        <div class="col-md-auto py-3">
+                            <p>Início</p>
+                            <div>
+                                <input id="startDate" class="form-control lightMode" type="date" />
+                                <input type="range" class="form-range" id="customRange1">
+                            </div>
+                        </div>
+                        <div class="col-md-auto py-3">
+                            <p>Fim</p>
+                            <div>
+                                <input id="startDate" class="form-control lightMode" type="date" />
+                                <input type="range" class="form-range" id="customRange1">
+                            </div>
+                        </div>
+
+                        <div class="col-md py-3">
+                            <p>Cidade</p>
+                            <select class="form-select lightMode">
+                                <option selected>Todos</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+
+                        <div class="col-md py-3">
+                            <p>Local</p>
+                            <select class="form-select lightMode">
+                                <option selected>Todos</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="col-md py-3">
+                            <p>Tipo de Painel</p>
+                            <select class="form-select lightMode">
+                                <option selected>Todos</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="m-0 row">
+                    <div class="mx-0 mb-3 p-0 row">
+                        <div class="col-md mx-0 pe-0">
+                            <div class="text-center rounded-4" style="width: 98%; height: 150px;">
                                 <div class="row">
-                                    <div>
-                                        <input id="startDate" class="form-control lightMode" type="date" />
-                                        <input type="range" class="form-range" id="customRange1">
-                                    </div>
-                                    <div>
-                                        <input id="startDate" class="form-control lightMode" type="date" />
-                                        <input type="range" class="form-range" id="customRange1">
+                                    <div class="mt-2">
+                                        <h3>Análise Semanal e Diário</h3>
                                     </div>
                                 </div>
 
-                            </div>
-                            <div class="py-3">
-                                <p>Cidade</p>
-                                <select class="form-select lightMode">
-                                    <option selected>Todos</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>
-
-                            <div class="py-3">
-                                <p>Local</p>
-                                <select class="form-select lightMode">
-                                    <option selected>Todos</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>
-                            <div class="py-3">
-                                <p>Tipo de Painel</p>
-                                <select class="form-select lightMode">
-                                    <option selected>Todos</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-10">
-                        <div class="row">
-                            <div class="col-md">
                                 <div class="row">
                                     <div class="col-md">
-                                        <div class="p-2 text-center rounded-4" style="width: 98%; height: 150px;">
-                                            <div class="row">
-                                                <div class="p-1">
-                                                    <h3>Análise Semanal e Diário</h3>
-                                                </div>
-                                            </div>
-
-                                            <div class="row minHeight minWidth">
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="audiencia"></p>
-                                                        <p>Audiência</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="impacto"></p>
-                                                        <p>Impactos</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="freq"></p>
-                                                        <p>Frequência</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="medDia"></p>
-                                                        <p>Média de dias monitorados</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="locais"></p>
-                                                        <p>N° Locais</p>
-                                                    </div>
-                                                </div>
-
-                                            </div>
+                                        <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                            <p id="audiencia"></p>
+                                            <p>Audiência</p>
                                         </div>
+                                    </div>
+
+                                    <div class="col-md">
+                                        <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                            <p id="impacto"></p>
+                                            <p>Impactos</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md">
+                                        <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                            <p id="freq"></p>
+                                            <p>Frequência</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md">
+                                        <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                            <p id="medDia"></p>
+                                            <p>Dias monitorados</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md">
+                                        <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                            <p id="locais"></p>
+                                            <p>N° Locais</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-4 mx-0 p-0 row flex-grow-1">
+                        <div class="col-md ">
+                            <div id="container1" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div class="p-1">
+                                    <p>Análise Diária Audiência X Impactos</p>
+                                </div>
+                                <div class="px-4 overflow-auto">
+                                    <div class="minHeight" id="grafico1Container">
+                                        <canvas width="70px" height="10px" id="grafico1" class=""></canvas>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="my-4 row flex-grow-1">
-                            <div class="col-md-8 minWidth">
-                                <div class="m-2 p-2 text-center rounded-4 shadow lightMode">
-                                    <div class="p-1">
-                                        <p>Análise Diária Audiência X Impactos</p>
-                                    </div>
-                                    <div class="px-4 overflow-auto">
-                                        <div class="minHeight" style="width: 1700px;">
-                                            <canvas width="70px" height="10px" id="grafico1" class=""></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 minWidth">
-                                <div class="m-2 p-2 text-center rounded-4 shadow lightMode">
-                                    <div class="px-4 overflow-auto" style="height: 300px;">
-                                        <div class="minHeight" style="height: 1700px;">
-                                            <canvas width="13px" height="80px" id="grafico3" class=""></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
-                        </div>
-
-                        <div class="row flex-grow-1">
-                            <div class="col-md-8 minWidth">
-                                <div class="p-2 m-2 text-center rounded-4 shadow lightMode">
-                                    <div class="p-1">
-                                        <p>Análise Semana Audiência X Impactos</p>
-                                    </div>
-                                    <div class="px-4 minHeight">
-                                        <canvas width="70px" height="20px" id="grafico2" class=""></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 minWidth">
-                                <div class="m-2 p-2 text-center rounded-4 shadow lightMode">
-                                    <div class="px-4 overflow-auto">
-                                        <div class="minHeight">
-                                            <div id="tooltip" class="tooltip-placeholder"></div>
-                                            <canvas width="70px" height="50px" id="grafico4" class=""></canvas>
-                                        </div>
+                        <div class="col-md ">
+                            <div id="container2" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div class="px-4 maxHeight overflow-auto">
+                                    <div class="minHeight" id="grafico3Container">
+                                        <canvas width="13px" height="80px" id="grafico3" class=""></canvas>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
                     </div>
+
+                    <div class="mx-0 p-0 row flex-grow-1">
+                        <div class="col-md ">
+                            <div id="container3" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <div class="p-1">
+                                    <p>Análise Semana Audiência X Impactos</p>
+                                </div>
+                                <div class="px-4 minHeight">
+                                    <canvas width="70px" height="20px" id="grafico2" class=""></canvas>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md ">
+                            <div id="container4" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                <!--<div class="px-4 overflow-auto">-->
+                                <div class="px-4">
+                                    <div class="minHeight">
+                                        <canvas width="70px" height="70px" id="grafico4" class=""></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
         </div>
-    </div>
 
-    <script>
-        var loader;
+        <script>
+            var loader;
 
-        function loadNow(elem) {
-            elem.parentNode.removeChild(elem);
+            function loadNow(elem) {
+                elem.parentNode.removeChild(elem);
 
-        }
+            }
 
-        function displayContent() {
-            loader.style.display = 'none';
-            document.getElementById('content').style.display = 'block';
-        }
+            function displayContent() {
+                loader.style.display = 'none';
+                document.getElementById('content').style.display = 'block';
+            }
 
-        document.addEventListener("DOMContentLoaded", function () {
-            loader = document.getElementById('loader');
-            initGraph();
-            loadNow(loader);
-        });
-    </script>
+            document.addEventListener("DOMContentLoaded", function () {
+                loader = document.getElementById('loader');
+                initGraph();
+                loadNow(loader);
+            });
+        </script>
 
-    <script th:src="@{/js/app.js}" type="text/javascript"></script>
-    <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
+        <script th:src="@{/js/app.js}" type="text/javascript"></script>
+        <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
 </body>
 
 
