--- a/src/main/resources/templates/dash/gerenciarDash.html
+++ b/src/main/resources/templates/dash/gerenciarDash.html
@@ -8,10 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link th:href="@{/bootstrap-icons-1.9.1/bootstrap-icons.css}" rel="stylesheet" type="text/css">
-    
-    <<link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}" type="text/css">
+
+    <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.min.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/menu.css}" type="text/css">
-    
+
     <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
     <script th:src="@{/js/menu.js}" type="text/javascript"></script>
     <title id="Title">Dashboard</title>
