criado e funcionando login,logout e restrição para paginas que precisa estar logado para acessar

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -34,7 +34,7 @@
 
                     </ul>
                     <form class="d-flex">
-                        <a class="btn btn-outline-secondary" href="login.html" role="button">Entrar</a>
+                        <a class="btn btn-outline-secondary" href="dash.html" role="button">Entrar</a>
                     </form>
                 </div>
             </div>
