--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Teste | Entrar</title>
+    <title>Entrar</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,24 +23,37 @@
         </div>
 
 
-        <form action="/auth/login/entrar" method="post">
+
+        <form th:action="@{/login.html}" method="post">
             <div class="row">
                 <div class="col">
                     <label for="exampleFormControlInput1" class="form-label">Email</label>
                 </div>
             </div>
-    
+
             <div class="row">
                 <div class="col">
-                    <input type="email" class="form-control" id="email" name="senha" placeholder="email@exemplo.com">
+                    <input type="email" class="form-control" id="email" name="username" placeholder="email@exemplo.com">
                 </div>
             </div>
-    
+
             <div class="row">
                 <div class="col">
                     <div class="mt-2 mb-3">
                         <label for="examplePassword" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="senha" name="senha"placeholder="******">
+                        <input type="password" class="form-control" id="senha" name="password" placeholder="******">
+                    </div>
+                    <div th:if="${param.error}">
+                        <div class="alert alert-danger" role="alert">
+                            Senha e/ou E-mail Inválido.
+                        </div>
+
+                    </div>
+                    <div th:if="${param.logout}">
+                        <div class="alert alert-danger" role="alert">
+                            Você precisa entrar na sua conta.
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -48,15 +61,15 @@
             <div class="row">
                 <div class="col">
                     <div class="mt-4 mb-3 text-end">
-                        <a class="btn btn-primary btnSize" role="button">Entrar</a>
-                        <!--<input type="submit" value="login">-->
+                        <input class="btn btn-primary btnSize" type="submit" value="Entrar">
+
                         <a class="btn btn-light" href="index.html" role="button">Voltar</a>
                     </div>
                 </div>
             </div>
         </form>
 
-        
+
 
         <div class="row">
             <div class="col text-end">
@@ -67,16 +80,6 @@
     </div>
 
 
-
-    <!--sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy-->
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
-        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
