--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -254,6 +254,6 @@ a {
     padding: 0%;
     width: 100%;
     height: 100vh;
-    background: #fff url('https://i.pinimg.com/originals/e9/70/82/e97082553918298a25af33ba66e70f12.gif') no-repeat center;
+    background: #fff url('src/main/resources/static/assets/load.gif') no-repeat center;
     z-index: 999;
 }
