✨ Troca de Graficos para tabelas

--- a/src/main/resources/templates/dash/dash.html
+++ b/src/main/resources/templates/dash/dash.html
@@ -140,7 +140,19 @@
                                 <div id="container2" class="my-2 p-2 text-center rounded-4 shadow lightMode">
                                     <div class="px-4 maxHeight overflow-auto">
                                         <div class="minHeight" id="grafico3Container">
-                                            <canvas width="13px" height="80px" id="grafico3" class=""></canvas>
+                                            <!--<canvas width="13px" height="80px" id="grafico3" class=""></canvas>-->
+                                            <table class="table table-striped">
+                                                <tr>
+                                                    <th>Data</th>
+                                                    <th>Audiência</th>
+                                                    <th>Impactos</th>
+                                                </tr>
+                    
+                                                <tbody id="tab1">
+                    
+                                                </tbody>
+                    
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
@@ -164,7 +176,19 @@
                                     <!--<div class="px-4 overflow-auto">-->
                                     <div class="px-4">
                                         <div class="minHeight">
-                                            <canvas width="70px" height="70px" id="grafico4" class=""></canvas>
+                                            <!--<canvas width="70px" height="70px" id="grafico4" class=""></canvas>-->
+                                            <table class="table table-striped">
+                                                <tr>
+                                                    <th>Dia da Semana</th>
+                                                    <th>Audiência</th>
+                                                    <th>Impactos</th>
+                                                </tr>
+                    
+                                                <tbody id="tab2">
+                    
+                                                </tbody>
+                    
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
