roles adicionadas no menu, já funcionando

--- a/src/main/resources/templates/forms/formularios.html
+++ b/src/main/resources/templates/forms/formularios.html
@@ -40,7 +40,7 @@
 <!--<body id="body-pd" style="background: #ebebf0" onload="initialize()">-->
 
 <body id="body-pd">
-    <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='formularios')"></div><!--MENU-->
     <div class="ms-5" id="page-content-wrapper">
         <!--BODY da página-->
         <div class="pt-3">
