--- a/src/main/resources/templates/forms/gerenciarFormularios.html
+++ b/src/main/resources/templates/forms/gerenciarFormularios.html
@@ -18,7 +18,7 @@
 </head>
 
 <body id="body-pd">
-    <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='formularios')"></div><!--MENU-->
 
     <div class="ms-5" id="page-content-wrapper">
         <!--BODY da página-->
