--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -1,6 +1,7 @@
 /*@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");*/
 
 :root {
+    margin-left: 0;
     --header-height: 3rem;
     --nav-width: 68px;
     --first-color: #2e75b5;
@@ -24,7 +25,7 @@
 body {
     position: relative;
     margin: var(--header-height) 0 0 0;
-    padding: 0 1rem;
+    padding: 0 0rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     transition: .5s;
@@ -161,7 +162,7 @@ a {
 }
 
 .body-pd {
-    padding-left: calc(var(--nav-width) + 1rem)
+    padding-left: calc(var(--nav-width) + 0rem)
 }
 
 .active {
@@ -212,7 +213,7 @@ a {
     }
 
     .body-pd {
-        padding-left: calc(var(--nav-width) + 200px)
+        padding-left: calc(var(--nav-width) + 175px)
     }
 }
 
@@ -253,6 +254,6 @@ a {
     padding: 0%;
     width: 100%;
     height: 100vh;
-    background: #fff url('https://i.pinimg.com/originals/e9/70/82/e97082553918298a25af33ba66e70f12.gif') no-repeat center;
+    background: #fff url('src/main/resources/static/assets/load.gif') no-repeat center;
     z-index: 999;
 }
