--- a/src/main/resources/templates/clients/gerenciarClientes.html
+++ b/src/main/resources/templates/clients/gerenciarClientes.html
@@ -18,10 +18,9 @@
 </head>
 
 <body id="body-pd">
-    <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='cliente')"></div><!--MENU-->
 
     <div class="ms-5" id="page-content-wrapper">
-        <!--BODY da página-->
         <div class="pt-3">
             <div class="p-4 lightMode">
 
