--- a/src/main/resources/templates/components/menuTamplate.html
+++ b/src/main/resources/templates/components/menuTamplate.html
@@ -1,28 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Bootstrap CSS -->
-    <link href="./bootstrap-icons-1.9.1/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./menu.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./menu.js"></script>
-    <title id="Title">Tamplate</title>
+    <title id="Title">menuTamplate</title>
 </head>
 
-<body id="body-pd" style="background: #ebebf0">
-    <script src="./menuTamplate.js"></script>
+<body >
+    <div th:fragment="menuTamplate(tela)" style="background: #ebebf0" id="body-pd">
 
-    <div class="ms-5" id="page-content-wrapper">
-        <!--BODY da página-->
-        <h1>BODY</h1>
+        <header class="header mx-0 row lightMode" id="header">
+            <div class="col">
+                <i class="bi bi-list" id="header-toggle"></i>
+            </div>
+
+            <div class="col-auto">
+                <i class="bi bi-moon-stars" id="nightSwitch"></i>
+            </div>
+        </header>
+
+        <div class="l-navbar" id="nav-bar">
+            <nav class="nav">
+                <div>
+                    <a href="index.html" class="nav_logo">
+                        <i class="bi bi-grid-1x2"></i>
+                        <span class="nav_logo-name">Everywhere Analitics</span>
+                    </a>
+                    
+                    <div sec:authorize="hasAnyAuthority('ADMIN', 'USER', 'SUB_USER','ACCESS_DASH')">
+                        <div class="nav_list">
+                            <a href="gerenciarDash.html" class="nav_link"
+                                th:classappend="${tela == 'dash'} ? active : inactive">
+                                <i class="bi bi-graph-up-arrow"></i>
+                                <span class="nav_name">Dashboard</span>
+                            </a>
+                        </div>
+
+                        <div sec:authorize="hasAnyAuthority('ADMIN', 'USER','ACCESS_USERS')">
+                            <a href="gerenciarUsuarios.html" class="nav_link"
+                                th:classappend="${tela == 'usuario'} ? active : inactive">
+                                <i class="bi bi-people"></i>
+                                <span class="nav_name">Usuários</span>
+                            </a>
+                        </div>
+
+                        <div sec:authorize="hasAnyAuthority('ADMIN', 'SUB_USER','USER','ACCESS_FORMS')">
+                            <a href="gerenciarFormularios.html" class="nav_link"
+                                th:classappend="${tela == 'formularios'} ? active : inactive">
+                                <i class="bi bx-x bi-card-checklist"></i>
+                                <span class="nav_name">Formulários</span>
+                            </a>
+                        </div>
+
+                        <div sec:authorize="hasAnyAuthority('ADMIN','ACCESS_CLIENTS')">
+                            <a href="gerenciarClientes.html" class="nav_link"
+                                th:classappend="${tela == 'cliente'} ? active : inactive">
+                                <i class="bi bi-person-video2"></i>
+                                <span class="nav_name">Clientes</span>
+                            </a>
+                        </div>
+
+                        <div sec:authorize="hasAnyAuthority('ADMIN','ACCESS_DOCKER')">
+                            <a href="gerenciarDocker.html" class="nav_link"
+                                th:classappend="${tela == 'docker'} ? active : inactive">
+                                <i class="bi bi-boxes"></i>
+                                <span class="nav_name">Docker</span>
+                            </a>
+                        </div>
+
+
+                    </div>
+                </div>
+                <a href="\logout" class="nav_link">
+                    <i class="bi bi-box-arrow-left"></i>
+                    <span class="nav_name">Desconectar</span>
+                </a>
+            </nav>
+        </div>
+
+        <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
     </div>
-    <script src="./cookies.js"></script>
+
 </body>
 
 </html>
