--- a/src/main/resources/templates/dash/dash.html
+++ b/src/main/resources/templates/dash/dash.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-<head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
-    <script th:src="@{/node_modules/chart.js/dist/chart.js}" type="text/javascript"></script>
+    <script th:src="@{/chart.js/dist/chart.js}" type="text/javascript"></script>
 
     <!-- Bootstrap CSS -->
     <link th:href="@{/bootstrap-icons-1.9.1/bootstrap-icons.css}" rel="stylesheet" type="text/css">
@@ -16,7 +16,6 @@
     <link rel="stylesheet" th:href="@{/css/menu.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/dash.css}" type="text/css">
     <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-    <script th:src="@{/js/menu.js}" type="text/javascript"></script>
 
     <title id="Title">Dashboard</title>
 
@@ -25,132 +24,136 @@
 <!--<body id="body-pd" style="background: #dfe0e6">-->
 
 <body id="body-pd">
-    <div id="loader"></div>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='dash')"></div><!--MENU-->
+
+    <div id="loader">
+    </div>
     <div id="content">
-        <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
-        <div class="ms-5" id="page-content-wrapper">
+
+        <div id="page-content-wrapper">
+
             <div class="flex-grow-1">
-                <div class="row">
-                    <div class="mt-5 col-md-2 minHeight minWidthBarra">
-                        <div class="p-3 text-start rounded-4 shadow bgBlue"
-                            style="width: 100%; height: 95%; color: #f5f6fa;">
-                            <div class="py-3 ">
-                                <p>Dados</p>
-                                <div class="row">
-                                    <div>
-                                        <input id="startDate" class="form-control lightMode" type="date" />
-                                        <input type="range" class="form-range" id="customRange1">
-                                    </div>
-                                    <div>
-                                        <input id="startDate" class="form-control lightMode" type="date" />
-                                        <input type="range" class="form-range" id="customRange1">
-                                    </div>
+                <div class="m-0 row">
+
+                    <div class="pb-2 text-start bgBlue" style="width: 100%; color: #f5f6fa;">
+                        <div class="row">
+                            <div class="col-md-auto py-1">
+                                <p>Início</p>
+                                <div>
+                                    <input id="startDate" class="form-control lightMode" type="date"
+                                        onchange="filtro()" />
+                                    <!--<input type="range" class="form-range" id="customRange1">-->
                                 </div>
-
                             </div>
-                            <div class="py-3">
+                            <div class="col-md-auto py-1">
+                                <p>Fim</p>
+                                <div>
+                                    <input id="endDate" class="form-control lightMode" type="date"
+                                        onchange="filtro()" />
+                                    <!--<input type="range" class="form-range" id="customRange1">-->
+                                </div>
+                            </div>
+
+                            <div class="col-md py-1">
                                 <p>Cidade</p>
-                                <select class="form-select lightMode">
-                                    <option selected>Todos</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
+                                <select id="cidades" class="form-select lightMode" onchange="filtro()">
+                                    <option value="Todos" selected>Todos</option>
                                 </select>
                             </div>
 
-                            <div class="py-3">
+                            <div class="col-md py-1">
                                 <p>Local</p>
-                                <select class="form-select lightMode">
+                                <select id="local" class="form-select lightMode" onchange="filtro()">
                                     <option selected>Todos</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
                                 </select>
                             </div>
-                            <div class="py-3">
+                            <div class="col-md py-1">
                                 <p>Tipo de Painel</p>
-                                <select class="form-select lightMode">
+                                <select id="painel" class="form-select lightMode" onchange="filtro()">
                                     <option selected>Todos</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
                                 </select>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-md-10">
-                        <div class="row">
-                            <div class="col-md">
-                                <div class="row">
-                                    <div class="col-md">
-                                        <div class="p-2 text-center rounded-4" style="width: 98%; height: 150px;">
-                                            <div class="row">
-                                                <div class="p-1">
-                                                    <h3>Análise Semanal e Diário</h3>
-                                                </div>
-                                            </div>
-
-                                            <div class="row minHeight minWidth">
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="audiencia"></p>
-                                                        <p>Audiência</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="impacto"></p>
-                                                        <p>Impactos</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="freq"></p>
-                                                        <p>Frequência</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="medDia"></p>
-                                                        <p>Média de dias monitorados</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-md">
-                                                    <div class="p-1 pt-3 fw-bold fs-5 rounded-4 shadow lightMode">
-                                                        <p id="locais"></p>
-                                                        <p>N° Locais</p>
-                                                    </div>
-                                                </div>
-
-                                            </div>
-                                        </div>
-                                    </div>
+                    <div class="mx-0 mb-3 p-0 text-center rounded-4" style="width: 100%;">
+                        <div class="row mx-0 pe-0">
+                            <div class="row">
+                                <div class="mt-2">
+                                    <h3>Análise Semanal e Diário</h3>
                                 </div>
                             </div>
+
+                            <div class="row">
+                                <div class="col-md my-2">
+                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                        <p id="audiencia"></p>
+                                        <p>Audiência</p>
+                                    </div>
+                                </div>
+
+                                <div class="col-md my-2">
+                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                        <p id="impacto"></p>
+                                        <p>Impactos</p>
+                                    </div>
+                                </div>
+
+                                <div class="col-md my-2">
+                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                        <p id="freq"></p>
+                                        <p>Frequência</p>
+                                    </div>
+                                </div>
+
+                                <div class="col-md my-2">
+                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                        <p id="medDia"></p>
+                                        <p>Dias monitorados</p>
+                                    </div>
+                                </div>
+
+                                <div class="col-md my-2">
+                                    <div class="p-1 fw-bold fs-5 rounded-4 shadow lightMode">
+                                        <p id="locais"></p>
+                                        <p>N° Locais</p>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="my-4 row flex-grow-1">
-                            <div class="col-md-8 minWidth">
-                                <div class="m-2 p-2 text-center rounded-4 shadow lightMode">
+                    </div>
+                    <div class="mx-0 p-0">
+                        <div class="mx-0 p-0 row flex-grow-1">
+                            <div class="col-md ">
+                                <div id="container1" class="my-2 p-2 text-center rounded-4 shadow lightMode">
                                     <div class="p-1">
                                         <p>Análise Diária Audiência X Impactos</p>
                                     </div>
                                     <div class="px-4 overflow-auto">
-                                        <div class="minHeight" style="width: 1700px;">
+                                        <div class="minHeight" id="grafico1Container">
                                             <canvas width="70px" height="10px" id="grafico1" class=""></canvas>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 minWidth">
-                                <div class="m-2 p-2 text-center rounded-4 shadow lightMode">
-                                    <div class="px-4 overflow-auto" style="height: 300px;">
-                                        <div class="minHeight" style="height: 1700px;">
-                                            <canvas width="13px" height="80px" id="grafico3" class=""></canvas>
+
+                            <div class="col-md ">
+                                <div id="container2" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                    <div class="px-4 maxHeight overflow-auto">
+                                        <div class="minHeight" id="grafico3Container">
+                                            <!--<canvas width="13px" height="80px" id="grafico3" class=""></canvas>-->
+                                            <table class="table table-striped">
+                                                <tr>
+                                                    <th>Data</th>
+                                                    <th>Audiência</th>
+                                                    <th>Impactos</th>
+                                                </tr>
+
+                                                <tbody id="tab1">
+
+                                                </tbody>
+
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
@@ -158,9 +161,9 @@
 
                         </div>
 
-                        <div class="row flex-grow-1">
-                            <div class="col-md-8 minWidth">
-                                <div class="p-2 m-2 text-center rounded-4 shadow lightMode">
+                        <div class="mx-0 p-0 row flex-grow-1">
+                            <div class="col-md ">
+                                <div id="container3" class="my-2 p-2 text-center rounded-4 shadow lightMode">
                                     <div class="p-1">
                                         <p>Análise Semana Audiência X Impactos</p>
                                     </div>
@@ -169,12 +172,24 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 minWidth">
-                                <div class="m-2 p-2 text-center rounded-4 shadow lightMode">
-                                    <div class="px-4 overflow-auto">
+                            <div class="col-md ">
+                                <div id="container4" class="my-2 p-2 text-center rounded-4 shadow lightMode">
+                                    <!--<div class="px-4 overflow-auto">-->
+                                    <div class="px-4">
                                         <div class="minHeight">
-                                            <div id="tooltip" class="tooltip-placeholder"></div>
-                                            <canvas width="70px" height="50px" id="grafico4" class=""></canvas>
+                                            <!--<canvas width="70px" height="70px" id="grafico4" class=""></canvas>-->
+                                            <table class="table table-striped">
+                                                <tr>
+                                                    <th>Dia da Semana</th>
+                                                    <th>Audiência</th>
+                                                    <th>Impactos</th>
+                                                </tr>
+
+                                                <tbody id="tab2">
+
+                                                </tbody>
+
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
@@ -186,30 +201,30 @@
 
             </div>
         </div>
-    </div>
 
-    <script>
-        var loader;
+        <script>
+            var loader;
 
-        function loadNow(elem) {
-            elem.parentNode.removeChild(elem);
+            function loadNow(elem) {
+                elem.parentNode.removeChild(elem);
 
-        }
+            }
 
-        function displayContent() {
-            loader.style.display = 'none';
-            document.getElementById('content').style.display = 'block';
-        }
+            function displayContent() {
+                loader.style.display = 'none';
+                document.getElementById('content').style.display = 'block';
+            }
 
-        document.addEventListener("DOMContentLoaded", function () {
-            loader = document.getElementById('loader');
-            initGraph();
-            loadNow(loader);
-        });
-    </script>
-
-    <script th:src="@{/js/app.js}" type="text/javascript"></script>
-    <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
+            document.addEventListener("DOMContentLoaded", function () {
+                loader = document.getElementById('loader');
+                initGraph();
+                loadNow(loader);
+            });
+        </script>
+        
+    <script th:src="@{/js/menu.js}" type="text/javascript"></script>
+        <script th:src="@{/js/app.js}" type="text/javascript"></script>
+        <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
 </body>
 
 
