--- a/src/main/resources/templates/dash/gerenciarDash.html
+++ b/src/main/resources/templates/dash/gerenciarDash.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
 </head>
 
 <body id="body-pd">
-    <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+    <div th:insert="components/menuTamplate :: menuTamplate(tela='dash')"></div><!--MENU-->
 
     <div class="ms-5" id="page-content-wrapper">
         <!--BODY da página-->
