--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -21,7 +21,7 @@
 </head>
 
 <body id="body-pd">
-  <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+  <div th:insert="components/menuTamplate :: menuTamplate(tela='usuario')"></div><!--MENU-->
 
   <div class="ms-5" id="page-content-wrapper row">
     <!--BODY da página-->
