--- a/src/main/resources/templates/components/menuTamplate.html
+++ b/src/main/resources/templates/components/menuTamplate.html
@@ -9,7 +9,7 @@
     <title id="Title">menuTamplate</title>
 </head>
 
-<body >
+<body>
     <div th:fragment="menuTamplate(tela)" style="background: #ebebf0" id="body-pd">
 
         <header class="header mx-0 row lightMode" id="header">
@@ -29,8 +29,9 @@
                         <i class="bi bi-grid-1x2"></i>
                         <span class="nav_logo-name">Everywhere Analitics</span>
                     </a>
-                    
-                    <div sec:authorize="hasAnyAuthority('ADMIN', 'USER', 'SUB_USER','ACCESS_DASH')">
+
+                    <div
+                        sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_USER', 'ROLE_SUB_USER','ROLE_ACCESS_DASH','ROLE_ACCESS_MANAGE_DASH')">
                         <div class="nav_list">
                             <a href="gerenciarDash.html" class="nav_link"
                                 th:classappend="${tela == 'dash'} ? active : inactive">
@@ -39,7 +40,8 @@
                             </a>
                         </div>
 
-                        <div sec:authorize="hasAnyAuthority('ADMIN', 'USER','ACCESS_USERS')">
+                        <div
+                            sec:authorize="hasAnyAuthority('ROLE_USER','ROLE_ACCESS_USERS','ROLE_ACCESS_MANAGE_USERS','ROLE_ACCESS_REGISTER_USERS')">
                             <a href="gerenciarUsuarios.html" class="nav_link"
                                 th:classappend="${tela == 'usuario'} ? active : inactive">
                                 <i class="bi bi-people"></i>
@@ -47,7 +49,8 @@
                             </a>
                         </div>
 
-                        <div sec:authorize="hasAnyAuthority('ADMIN', 'SUB_USER','USER','ACCESS_FORMS')">
+                        <div
+                            sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_SUB_USER','ROLE_USER','ROLE_ACCESS_FORMS','ROLE_ACCESS_MANAGE_FORMS','ROLE_ACCESS_REGISTER_FORMS')">
                             <a href="gerenciarFormularios.html" class="nav_link"
                                 th:classappend="${tela == 'formularios'} ? active : inactive">
                                 <i class="bi bx-x bi-card-checklist"></i>
@@ -55,7 +58,8 @@
                             </a>
                         </div>
 
-                        <div sec:authorize="hasAnyAuthority('ADMIN','ACCESS_CLIENTS')">
+                        <div
+                            sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_ACCESS_CLIENTS','ROLE_ACCESS_MANAGE_CLIENTS','ROLE_ACCESS_REGISTER_CLIENTS')">
                             <a href="gerenciarClientes.html" class="nav_link"
                                 th:classappend="${tela == 'cliente'} ? active : inactive">
                                 <i class="bi bi-person-video2"></i>
@@ -63,7 +67,8 @@
                             </a>
                         </div>
 
-                        <div sec:authorize="hasAnyAuthority('ADMIN','ACCESS_DOCKER')">
+                        <div
+                            sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_ACCESS_DOCKER','ROLE_ACCESS_MANAGE_DOCKER','ROLE_ACCESS_REGISTER_DOCKER')">
                             <a href="gerenciarDocker.html" class="nav_link"
                                 th:classappend="${tela == 'docker'} ? active : inactive">
                                 <i class="bi bi-boxes"></i>
